@@ -1,6 +1,8 @@
                     Changes made to Pyjamas since 0.6
                     ---------------------------------
 
+ * Add support for multiple compare (0 < n < 4)
+
  * Add PUT and DELETE into XMLHttpRequest (thanks to Nick <thretwon@gmail.com>)
 
  * Added for in tuple
